- eliminate NULL proc ping for singleton host or local mounts.
- fix incorrect read/write size of startup status token (Matthias Koenig).
- fix off-by-one error for lookup of map keys exactly 255 characters long.
- improve handling of server not available.
- fix LDAP_URI server selection.
- add authentication option for using an external credential cache.
- expand support for the "%" hack.

18/06/2007 autofs-5.0.2
-----------------------
- fix return check for getpwuid_r and getgrgid_r.
- give up trying to update exports list while host is mounted.
- fix to "@network" matching.
- check for fstab update and retry if not updated.
- change file map lexer to allow white-space only blank lines.
- remove macro substitution in automount.8 man page (Guillaume Rousse).
- correct hesiod library check in configure (Guillaume Rousse).
- drop "DEFAULT_" prefix from configuration names (Guillaume Rousse).
- remove redundant ident macros.
- various configure cleanups (Richard Daniel).
- various code cleanups (Richard Daniel).
- fixed numeric export match.
- add option to select replicated server at random (instead of response time).
- fix incorrect cast in directory cleanup routines.
- fix directory creation for browse mounts.
- fix wildcard map handling and improve nsswitch source map re-reading.
- fix "null" domain netgroup match for "-hosts" map.
- update kernel patches.
- add configuration variable to control appending of global options.
- add command option to set a global mount options string.
- add check for labeled local filesystems (Matthias Koenig).
- disable exports check for "-hosts" map.
- fix memory allocation problem with global options patch.
- fix master map lexer to admit "." in macro values (Mike Matera).
- make ldap attribute match case insensitive.
- add missed man page update for APPEND_OPTIONS config option.
- add ldaps protocol support.
  - note: it's no longer possible to multiple hosts in an ldap map spec.